syntax = "proto3";
package FileUploaderService;
option csharp_namespace = "gRpcFileServiceSample.Client.Protos";

message FileUploadRequest {
  oneof Data {
	  string fileName=1;
	  bytes chunk=2;
  };
}