syntax = "proto3";
package FileUploaderService;
option csharp_namespace = "gRpcFileServiceSample.Client.Protos";
import "Protos/FileUploadRequest.proto";
import "Protos/FileUploadResponse.proto";

service FileUploaderService {
  rpc UploadFileBigAllocation (stream FileUploadRequest) returns (FileUploadResponse);
  rpc UploadFileSmallAllocationSlow (stream FileUploadRequest) returns (FileUploadResponse);
  rpc UploadFileSmallAllocationFast (stream FileUploadRequest) returns (FileUploadResponse);
}